@@ -82,6 +82,19 @@ namespace TAO
 
     private:
 
+      /// Parse an X509 file path, which is expected to looks like:
+      ///   <X509Path> ::= <Prefix> ':' <Path>
+      ///   <Prefix>   ::= 'PEM' | 'ASN1'
+      ///   <Path>     ::= any-string
+      /// Returns either SSL_FILETYPE_ASN1, SSL_FILETYPE_PEM or -1
+      /// if the prefix can not be recognized. The *path will point
+      /// to the part of the original buffer, after the initial ':',
+      /// or will contain 0, if no path was specified.
+      /// 
+      /// Beware: This function modifies the buffer pointed to by arg!
+      /// 
+      static int parse_x509_file_path (char *arg, char **path);
+      
       /// Create and register the SSLIOP ORB initializer.
       int register_orb_initializer (
         CSIIOP::AssociationOptions csiv2_target_supports,
